--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "gatsby-plugin-sass": "^4.0.2",
+    "node-sass": "^5.0.0",
+    "prettier": "2.2.1",
+    "sass": "^1.32.8"
   },
   "keywords": [
     "gatsby",
